--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.data.mongodb.uri=mongodb+srv://thimirakumarasinghe456:YzsznJ1tTL7lemWN@cl
 spring.data.mongodb.database=dishcraft_db
 spring.security.user.name=admin
 spring.security.user.password=admin
-
+jwt.secret=your-secret-key
+jwt.expiration=86400000 # 24 hours
 
 # Optional
 server.port=8080
