--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.data.mongodb.database=dishcraft_db
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-jwt.secret=your-secret-key
+jwt.secret=12345678901234567890123456789012 # 32 characters
 jwt.expiration=86400000 # 24 hours
 
 server.port=8080
